auth avatar, expect fix dark mode

--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,2 +1,3 @@
-$primary-color: #f97316;
+$primary-color: #38e54d;
+$primary-color-light: #066b12;
 $primary-light-text: #333;
